about swamp test

--- a/about-swamp.qmd
+++ b/about-swamp.qmd
@@ -2,4 +2,4 @@
 
 This is a book created from markdown and executable code.
 
-See @knuth84 for additional discussion of literate programming.
+Test: SWAMP is the best!
