edit structure & add sections

--- a/expectations.qmd
+++ b/expectations.qmd
@@ -1,1 +1,13 @@
+# Expectations
 
+For all SWAMP staff members
+
+## Work schedule
+
+## Communication
+
+## Expectations of rank-and-file
+
+## Expectations of supervisors
+
+## Professional development
