--- a/training.qmd
+++ b/training.qmd
@@ -1,6 +1,6 @@
-# Training
+# Training 
 
-This is the page for onboarding. Please re-reference this page throughout your time at SWAMP!
+Need help navigating the multiple travel landing pages? Hopefully this will help!
 
 ## Contacts
 
