clarify section is for onboarding rank-and-file employees

--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -1,6 +1,6 @@
 # Onboarding
 
-Here is a non-comprehensive, but hopefully informative guide to onboarding to the SWAMP Unit. The majority of this information is aimed towards starting at SWAMP as a state employee. Please re-reference this page throughout your time at SWAMP!
+Here is a non-comprehensive, but hopefully informative guide to onboarding to the SWAMP Unit. The majority of this information in this section is aimed towards starting at SWAMP as a rank-and-file (non-supervisory) state employee. Please re-reference this page throughout your time at SWAMP!
 
 ## HR forms
 
@@ -34,8 +34,7 @@ When onboarded, employees in most classifications will be able to select a leave
 Important FAQ for leave types:
 
 -   You are only allowed to switch leave types every 2 years. Check with our HR liaison about switching leave types.
--   Leave types are also connected to different types of non-work-related disability leave, which may
-    impact your income should you need to go on disability leave. Non-work-related disability leave types are compared for Unit 10 employees on this [flyer](https://capsscientists.org/wp-content/uploads/2018/02/Facts-about-ENDI.pdf). More information about non-work-related disability leave is also available on the EDD [website](https://edd.ca.gov/).
+-   Leave types are also connected to different types of non-work-related disability leave, which may impact your income should you need to go on disability leave. Non-work-related disability leave types are compared for Unit 10 employees on this [flyer](https://capsscientists.org/wp-content/uploads/2018/02/Facts-about-ENDI.pdf). More information about non-work-related disability leave is also available on the EDD [website](https://edd.ca.gov/).
 -   Leave accrual can be impacted by the number of days/hours you work in a month.
 
 ## CalPERS
