Updated travel page, added forms, travel overview and contact information.

--- a/travel.qmd
+++ b/travel.qmd
@@ -1,9 +1,50 @@
 # Travel
 
-This is the page for travel
+Exempt, excluded, and represented state employees may be eligible for the reimbursement of authorized out-of-pocket expenses that are reasonably, actually, and necessarily incurred as a result of conducting state business
 
 ## Quick links
 
-## Travel Form FAQs
+-   [Travel Reimbursements](https://www.calhr.ca.gov/employees/pages/travel-reimbursements.aspx) 
+
+-   [HR Allowances and Travel Reimbursements](https://hrmanual.calhr.ca.gov/Home/ManualItem/1/2203) 
+
+-   [Water Board\'s Travel Page (Intanet)](https://waternet.waterboards.ca.gov/das/accounting/travel.shtml) - can only access on VPN 
+
+-   [Travel Forms (Intranet)](https://waternet.waterboards.ca.gov/das/forms/index.php?form_category=Travel&=Submit+Query) - can only access on VPN 
+
+## Travel Overview
+
+The [Travel Help Desk](https://www.sco.ca.gov/calaters_global.html) can provide assistance or answer questions about making travel reservations, recommendations while traveling, and asking for reimbursement when you return. The Travel Help Desk for the Waterboards is comprised of the Travel Unit staff in the Accounting Office as part of the Division of Administrative Services. 
+
+Visit [CalTravelStore](http://www.caltravelstore.com/), a self-serve site for all government business travel needs. Travelers are able to make reservations for lodging, airfare, rental car & rail fare through Concur which is personalized to meet the needs of State government travelers.\
+
+**CalTravelStore New User Registration**\
+For new users to be added to CalTravelStore to begin making reservations, contact the CalATERS Travel Help Desk.\
+Email: [CalATERS-Travel\@waterboards.ca.gov](mailto:CalATERS-Travel@waterboards.ca.gov)\
+Phone: (916) 341-5036
+
+**TIPS:**
+
+1.  Receipts should be submitted for every item of expense of \$25 or more. When receipts are not required to be submitted with a travel expense claim, it is the employee\'s responsibility to maintain receipts and records of their actual expenses. Read more information on reimbursement [here.](https://hrmanual.calhr.ca.gov/Home/ManualItem/1/2203)  
+
+2.  Know your [reimbursement rates](https://www.calhr.ca.gov/employees/Pages/travel-reimbursements.aspx)! State employees may be eligible to receive reimbursement for expenses such as:
+
+    -   Method of travel (transportation)
+
+    -   Meals and incidentals
+
+    -   Short-term lodging
+
+    -   Out-of-state travel
+
+    -   Out-of-country travel
+
+    -   Personal vehicle mileage 
+
+    -   Other actual and necessary business and/or travel costs incurred while conducting official state business
 
 ## Contacts
+
+**CalATERS Travel Help Desk**\
+**Phone:** (916) 341-5036\
+**Email:** [CalATERS-Travel\@waterboards.ca.gov](mailto:CalATERS-Travel@waterboards.ca.gov)
